refactor(back): Clear shopping cart when we create an order